--- a/test/css/main.css
+++ b/test/css/main.css
@@ -1,5 +1,9 @@
+@import url("./box.css");
+
 div {
     width: 200px;
     height: 200px;
-    background: url("../images/logo.png");
+    font-size: 100px;
 }
+
+
