--- a/test/css/importantSelector.css
+++ b/test/css/importantSelector.css
@@ -1,9 +1,21 @@
-div.id { color: red !important; }
-#color_yellow { color: yellow; }
-.color_green { color: green; }
-div { color: blue; }
-* { color: darkblue; }
-body { color: violet; }
+div { 
+    color: red !important;
+ }
+#color_yellow { 
+    color: yellow;
+ }
+.color_green { 
+    color: green;
+ }
+div { 
+    color: blue;
+ }
+* { 
+    color: darkblue;
+ }
+body { 
+    color: violet;
+ }
 
 div#hello {
     color: green;
