--- a/test/css/borderPractice.css
+++ b/test/css/borderPractice.css
@@ -11,3 +11,12 @@
     border-width: 15px;
     border-bottom-style: dashed;
 }
+
+.container .borderItem{
+    width: 100px;
+    height: 100px;
+    background-color: orange   ;
+    margin: 20px;
+    border-radius: 20px;
+
+}
